--- a/BarberShop/app/src/main/AndroidManifest.xml
+++ b/BarberShop/app/src/main/AndroidManifest.xml
@@ -10,6 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BarberShop">
         <activity
+            android:name=".FormEmplActivity"
+            android:exported="false"
+            android:label="@string/title_activity_form_empl"
+            android:theme="@style/Theme.BarberShop.NoActionBar" />
+        <activity
+            android:name=".ListEmplActivity"
+            android:exported="false"
+            android:label="@string/title_activity_list_employee"
+            android:theme="@style/Theme.BarberShop.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
