--- a/BarberShop/app/src/main/AndroidManifest.xml
+++ b/BarberShop/app/src/main/AndroidManifest.xml
@@ -20,6 +20,16 @@
             android:label="@string/title_activity_list_employee"
             android:theme="@style/Theme.BarberShop.NoActionBar" />
         <activity
+            android:name=".FormScheduleActivity"
+            android:exported="false"
+            android:label="@string/agenda"
+            android:theme="@style/Theme.BarberShop.NoActionBar" />
+        <activity
+            android:name=".ListScheduleActivity"
+            android:exported="false"
+            android:label="@string/agendaMenu"
+            android:theme="@style/Theme.BarberShop.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
