--- a/AppPersist/app/src/main/AndroidManifest.xml
+++ b/AppPersist/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.pro.pedro.myapplication" >
+    package="br.pro.adalto.apppersist">
 
     <application
         android:allowBackup="true"
@@ -8,15 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppPersist" >
+        android:theme="@style/Theme.AppPersist">
         <activity
-            android:name=".FormActivity"
+            android:name=".FormularioActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppPersist.NoActionBar" >
+            android:theme="@style/Theme.AppPersist.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
